Correct a layout bug with the singlelineinput wrapper
A problem occurred where the wrapper around a-input-singlelineedit prevented a bottom-margin from being correctly applied. Gives the class a more appropriate name.

--- a/Survey/source/styles/a-input-singlelineedit.scss
+++ b/Survey/source/styles/a-input-singlelineedit.scss
@@ -16,7 +16,12 @@
     text-align: right;
 }
 
-.a-input-singlelineedit:last-child {
+.m-input-singlelineedit {
+    margin-bottom: .5em;
+}
+
+.a-input-singlelineedit:last-child,
+.m-input-singlelineedit:last-child {
     margin-bottom: 0;
 }
 
